--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="styles/css/styles.css">
+    <title>boid</title>
     <script src="dist/bundle.js"></script>
   </head>
   <body>
